Use same phong shader function for non data defined colors

Ensures that the same results are obtained for both the
data defined and non-data defined color situations, and ensures
that https://bugreports.qt.io/browse/QTBUG-77665 does not
impact the non-data defined color case.